use official JVM parameters
except -Dunifi.core.enabled